# dotvault

./: .gitattributes  .gitignore  .goreleaser.yml  CLAUDE.md  Makefile  README.md  config.dev.yaml  configsvc.dev.yaml  dex.yaml  docker-compose.yaml  go.mod  go.sum  mkdocs.yml  vault-server.hcl
.claude/: launch.json  settings.json
.claude/hooks/: prepush-review-reminder.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: claude-code-review.yml  docs.yml  python.yml  release.yml  test.yml
assets/: versioninfo.json
client/: README.md  client.go  client_test.go  config.go  config_test.go  errors.go  errors_test.go  example_test.go  remote.go  remote_test.go
cmd/dotvault/: browse.go  browse_test.go  configlog_test.go  console_other.go  console_windows.go  enrol.go  enrol_keywait_other.go  enrol_keywait_unix.go  enrol_test.go  enrol_vtmode_other.go  enrol_vtmode_windows.go  headless_token_test.go  main.go  main_test.go  notify.go  notify_test.go  peerpost.go  refresh_test.go  remoteconfig_test.go
cmd/dotvault-config/: main.go
dev/: glauth.cfg  mint-svc-cert.sh
dev/remote-layers/: global.yaml  groups.yaml
docs/: cli.md  index.md  web-ui.md
docs/admin/: deployment.md  windows-gpo.md
docs/authentication/: ldap-mfa.md  mtls-tpm.md  mtls.md  oidc.md  overview.md  token.md  tpm.md
docs/configuration/: config-reference.md  remote-config.md  sync-rules.md  templates.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: ssh-agent.md
docs/services/: copy.md  databricks.md  dotvault-config.md  ghp.md  github.md  jfrog.md  langsmith.md  overview.md  ssh.md
docs/vault/: policies.md
internal/agent/: agent.go  backend.go  backend_test.go  factory.go  factory_test.go  factory_windows_test.go  helper_test.go  kv.go  kv_test.go  listener.go  listener_unix.go  listener_unix_test.go  listener_windows.go  listener_windows_test.go  pageant_hash.go  pageant_hash_test.go  query.go  query_test.go  service.go  service_test.go  service_unix_test.go  status.go  upstream.go  upstream_unix_test.go  vaultca.go  vaultca_test.go
internal/auth/: auth.go  auth_test.go  downscope.go  downscope_test.go  ldap.go  lifecycle.go  lifecycle_test.go  login.go  login_test.go  method.go  mtls.go  mtls_envelope.go  mtls_test.go  oidc.go  oidc_test.go  osstore_cert_test.go  peerpost.go  peerpost_test.go  seal_token_test.go  socket.go  socket_test.go  token.go  token_test.go
internal/config/: agent_config_test.go  config.go  config_test.go  merge.go  merge_test.go  mtls_config_test.go  partial.go  partial_test.go  registry_other.go  registry_test.go  registry_windows.go  registry_windows_test.go  remote.go  remote_test.go
internal/configsvc/: admin_api.go  admin_api_test.go  admin_auth.go  admin_ldap.go  admin_ldap_test.go  admin_mtls.go  admin_mtls_test.go  admin_ui.go  compose.go  compose_test.go  composition.go  composition_test.go  config.go  config_test.go  seed.go  seed_test.go  server.go  server_test.go
internal/daemon/: daemon.go  daemon_test.go  daemon_unix.go  daemon_windows.go  detach_unix.go  detach_windows.go  tray.go  tray_darwin.go  tray_stub.go  tray_windows.go
internal/web/: api.go  (+23 more)
python/: README.md  pyproject.toml  setup.py
python/bridge/: bridge.go  bridge_test.go
python/src/dotvault/: __init__.py  _errors.py  _ffi.py
python/tests/: conftest.py  test_client.py  test_errors.py  test_millis.py  test_remote.py
specs/: dotvault-spec.md
(+225 files in other folders)
